--- a/helpers/pascal_parts/demo.ipynb
+++ b/helpers/pascal_parts/demo.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -177,7 +177,7 @@
     "        \n",
     "#         return buffer_mask\n",
     "#         frontal_face = set(['lear', 'rear', 'mouth', 'leye', 'reye', 'lebrow', 'rebrow'])\n",
-    "        frontal_face = set(['mouth', 'leye', 'reye'])\n",
+    "        frontal_face = set(['mouth', 'leye', 'reye', 'lebrow', 'rebrow'])\n",
     "    \n",
     "        # For a completely frontal face we need to be able to locate all of the above\n",
     "        # For a partial frontal face we need to be able to locate atleast one of the ears. This could be the logic\n",
@@ -187,8 +187,36 @@
     "        if all_parts == all_parts.union(frontal_face):\n",
     "            # then this is a frontal face. We can just return the head here\n",
     "            for tiny_part in an_obj.parts:\n",
-    "                if tiny_part.part_name == 'head':\n",
+    "                if tiny_part.part_name == 'head':                    \n",
     "                    return tiny_part.mask\n",
+    "#             hair_mask = neck_mask = np.zeros_like(an_obj.mask, dtype = np.uint8)\n",
+    "#             for tiny_part in an_obj.parts:\n",
+    "#                 if tiny_part.part_name == 'head':\n",
+    "#                     buffer_mask += tiny_part.mask\n",
+    "#                 if tiny_part.part_name == 'hair':\n",
+    "#                     hair_mask = tiny_part.mask\n",
+    "#                 if tiny_part.part_name == 'neck':\n",
+    "#                     neck_mask = tiny_part.mask\n",
+    " \n",
+    "#             buffer_mask -= hair_mask\n",
+    "#             buffer_mask[buffer_mask == 255] = 0\n",
+    "\n",
+    "#             buffer_mask -= neck_mask\n",
+    "#             buffer_mask[buffer_mask == 255] = 0\n",
+    "            \n",
+    "#             # Now find the biggest contour and return a mask that satisfies it\n",
+    "#             contours, hierarchy = cv2.findContours(buffer_mask, cv2.RETR_TREE, cv2.CHAIN_APPROX_NONE)   \n",
+    "            \n",
+    "#             # Find the biggest area\n",
+    "#             c = max(contours, key = cv2.contourArea)\n",
+    "#             x,y,w,h = cv2.boundingRect(c)\n",
+    "#             height, width = buffer_mask.shape\n",
+    "#             xc = (x+(w/2))/width\n",
+    "#             yc = (y+(h/2))/width\n",
+    "#             w = w/width\n",
+    "#             h = h/height\n",
+    "            \n",
+    "#             return xc,yc,w,h\n",
     "        else:\n",
     "            # Return an empty mask if the head doest not contain all the required parts\n",
     "            return buffer_mask\n",
@@ -230,6 +258,12 @@
     "        # Get a combined mask for the sub_part for example a mask that encampasses [ear, hair] or [head, left_shoulder, right_shoulder]\n",
     "        combined_mask = get_combined_mask(an_obj, sub_part)\n",
     "\n",
+    "        if type(combined_mask) == \"tuple\":\n",
+    "            parts_stat[index] += 1\n",
+    "            xc,yc,w,h = combined_mask\n",
+    "            annot_per_part.append([index, xc,yc,w,h])\n",
+    "            continue\n",
+    "        \n",
     "        # Check if this combined mask is empty:\n",
     "        if len(np.unique(combined_mask)) > 1:\n",
     "            \n",
@@ -239,19 +273,15 @@
     "            \n",
     "#             if type(image) != \"NoneType\":\n",
     "#                 cv2.rectangle(image, p1, p2, (255, 0, 0), 2)\n",
-    "                \n",
-    "                \n",
     "#                 f, (ax1, ax2) = plt.subplots(1, 2, figsize=(20, 20))\n",
     "#                 ax1.imshow(image)\n",
     "#                 ax1.set_title('Image')\n",
     "#                 ax1.axis('off')\n",
-    "                \n",
     "#                 print(combined_mask.dtype)\n",
     "#                 cv2.rectangle(combined_mask, p1, p2, (0, 255, 200), 2)\n",
     "#                 ax2.imshow(combined_mask)\n",
     "#                 ax2.set_title('Mask BB')\n",
-    "#                 ax2.axis('off')\n",
-    "                \n",
+    "#                 ax2.axis('off')             \n",
     "#                 plt.show()\n",
     "            \n",
     "            # Make sure these are normalised\n",
@@ -271,7 +301,7 @@
    },
    "outputs": [],
    "source": [
-    "def parts2darknet(parts, anno_paths):\n",
+    "def parts2darknet(parts, anno_paths, darknet_path = \"darknet/darknet_annots/aug_pf/\"):\n",
     "    # Parts is a list of tuples\n",
     "    # for example: [('head'), ('torso', 'left_lower_leg', 'right_lower_leg'), ('all')]\n",
     "\n",
@@ -279,7 +309,7 @@
     "    # Each Annotation is its own image so for now lets store\n",
     "\n",
     "    # The function will return a dictionary where each valid image's name will become the key and have a list of darknet annotations\n",
-    "    # for values. So for examples \n",
+    "    # for values. So for examples\n",
     "\n",
     "    parts_stat = [0] * len(parts)\n",
     "    \n",
@@ -304,6 +334,38 @@
     "            \n",
     "            continue\n",
     "\n",
+    "        ##################\n",
+    "        #### Augment Image\n",
+    "        ##################\n",
+    "        # Add new augmented data to the anno_dict\n",
+    "        # We will need to read the anno_dict for annotations\n",
+    "        # Because we know that our camera will be static we can be sure that only our subjects will be blurred out due to motion\n",
+    "        # SO we will utilise this knowledge to motion blur only the subjects which are potentially candidates for motion blur. Which are all persons\n",
+    "        # When ever we find a anno dict key which has \n",
+    "        # Here we append augmented data to the dictionary\n",
+    "            # The problem is that afterwards we copy the images\n",
+    "\n",
+    "        # Read the Image\n",
+    "        aug_img = np.copy(an.im)\n",
+    "\n",
+    "        # Apply Motion Blur in several Directions\n",
+    "        v, h, d, o = apply_motion_blur(aug_img, k_size=10)\n",
+    "\n",
+    "        # Adjust the bounding boxes \n",
+    "            # No need to adjust the bounding box\n",
+    "\n",
+    "        # Add person_bbs to the anno_dict against a new aug_0_{im_id} <- key\n",
+    "        v_id = f\"aug_v_{im_id}\"\n",
+    "        h_id = f\"aug_h_{im_id}\"\n",
+    "        d_id = f\"aug_d_{im_id}\"\n",
+    "        o_id = f\"aug_o_{im_id}\"\n",
+    "        \n",
+    "        # Now copy augmented images to the the folder\n",
+    "        cv2.imwrite(darknet_path + v_id+\".jpg\", v)\n",
+    "        cv2.imwrite(darknet_path + h_id+\".jpg\", h)\n",
+    "        cv2.imwrite(darknet_path + d_id+\".jpg\", d)\n",
+    "        cv2.imwrite(darknet_path + o_id+\".jpg\", o)\n",
+    "            \n",
     "        # Traverse the objects\n",
     "        for obj in an.objects:\n",
     "            n_objects += 1\n",
@@ -315,20 +377,26 @@
     "                # The chunk of the work happens here: Bounding boxes and classes are generated here\n",
     "#                 person_bbs, parts_count = generate_bbs(obj, parts, parts_stat, image= an.im)\n",
     "                person_bbs, parts_count = generate_bbs(obj, parts, parts_stat)\n",
-    "\n",
+    "                \n",
     "                # Here we append these bbs to our dictionary\n",
     "                if im_id not in anno_dict.keys():\n",
     "                    anno_dict[im_id] = []\n",
+    "                    anno_dict[v_id] = []\n",
+    "                    anno_dict[h_id] = []\n",
+    "                    anno_dict[d_id] = []\n",
+    "                    anno_dict[o_id] = []\n",
     "\n",
     "                # Appending new annotations to the dictionary\n",
     "                for bb in person_bbs:\n",
     "                    anno_dict[im_id].append(bb)\n",
-    "                \n",
+    "                    anno_dict[v_id].append(bb)\n",
+    "                    anno_dict[h_id].append(bb)\n",
+    "                    anno_dict[d_id].append(bb)\n",
+    "                    anno_dict[o_id].append(bb)\n",
     "                    \n",
     "    print(f\"Found {n_person} persons\")\n",
     "    print(f\"Found {n_neg_frames} negative frames\")\n",
     "    print(f\"Found {n_objects} total objects\")\n",
-    "    \n",
     "    print(f\"Parts Distribution: \", parts_count)\n",
     "    \n",
     "    return anno_dict"
@@ -337,6 +405,57 @@
   {
    "cell_type": "code",
    "execution_count": 7,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def apply_motion_blur(image, k_size = 30):\n",
+    "    # Returns the augmented image\n",
+    "    # Specify the kernel size. \n",
+    "    # The greater the size, the more the motion. \n",
+    "    kernel_size = k_size\n",
+    "    \n",
+    "    # Vertical Kernel \n",
+    "    kernel_v = np.zeros((kernel_size, kernel_size))\n",
+    "    # Horizontal Kernel\n",
+    "    kernel_h = np.copy(kernel_v) \n",
+    "    # Diagonal Kernel\n",
+    "    kernel_diag = np.copy(kernel_v)\n",
+    "    # Opposite Diagonal Kernel\n",
+    "    kernel_opposite_diag = np.copy(kernel_v)\n",
+    "\n",
+    "    # Fill the middle row with ones. \n",
+    "    kernel_v[:, int((kernel_size - 1)/2)] = np.ones(kernel_size)\n",
+    "    kernel_h[int((kernel_size - 1)/2), :] = np.ones(kernel_size)\n",
+    "    kernel_diag = cv2.line(kernel_diag, (0, 0), (kernel_size-1, kernel_size-1), (1), 1)\n",
+    "    kernel_opposite_diag = cv2.line(kernel_opposite_diag, (kernel_size-1, 0), (0, kernel_size-1) , (1), 1)\n",
+    "\n",
+    "    # Normalize. \n",
+    "    kernel_v /= kernel_size \n",
+    "    kernel_h /= kernel_size \n",
+    "    kernel_diag /= kernel_size\n",
+    "    kernel_opposite_diag /= kernel_size\n",
+    "\n",
+    "    # Apply the vertical kernel. \n",
+    "    vertical_mb = cv2.filter2D(image, -1, kernel_v) \n",
+    "    \n",
+    "    # Apply the horizontal kernel. \n",
+    "    horizonal_mb = cv2.filter2D(image, -1, kernel_h) \n",
+    "    \n",
+    "    # Apply the diagonal kernel\n",
+    "    diagonal_mb = cv2.filter2D(image, -1, kernel_diag)\n",
+    "    \n",
+    "    opposite_diagonal_mb = cv2.filter2D(image, -1, kernel_opposite_diag)\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "    return vertical_mb, horizonal_mb, diagonal_mb, opposite_diagonal_mb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "metadata": {
     "collapsed": true
    },
@@ -361,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -384,76 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10103/10103 [09:13<00:00, 18.24it/s]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Found 7803 persons\n",
-      "Found 6564 negative frames\n",
-      "Found 12958 total objects\n",
-      "Parts Distribution:  [7803]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
-   "source": [
-    "# To get pfhul we would like to do all, face, head, upper body, lower body\n",
-    "upper_body = ('torso', 'luarm', 'llarm', 'ruarm', 'rlarm', 'lhand', 'rhand')\n",
-    "lower_body = ('luleg', 'llleg', 'ruleg', 'rlleg', 'rfoot', 'lfoot')\n",
-    "\n",
-    "face = ('frontal_face')\n",
-    "pfhul = [('all'), face, ('head'), upper_body, lower_body]\n",
-    "pf = [('all'), face]\n",
-    "anno_dict = parts2darknet([('all')], anno_paths)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Annotations were written to file successfully !!\n"
-     ]
-    }
-   ],
-   "source": [
-    "write_annots(anno_dict, containing_folder=\"darknet_annots/person/\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "generate_test_train_files(anno_dict, \"person\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -461,24 +511,16 @@
    "source": [
     "def copy_images(anno_dict, obj_name):\n",
     "    for im_id in anno_dict.keys():\n",
+    "        # If the image is augmented then dont copy it to the folder because it already exists\n",
+    "        if im_id.split(\"_\")[0] == \"aug\":\n",
+    "            continue\n",
     "        im_path = \"../VOC2010/VOCdevkit/VOC2010/JPEGImages/\" + im_id + \".jpg\"\n",
     "        copy(im_path, f\"./darknet/darknet_annots/{obj_name}/\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "copy_images(anno_dict, \"person\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -489,13 +531,16 @@
     "    \n",
     "    upper_body = ('torso', 'luarm', 'llarm', 'ruarm', 'rlarm', 'lhand', 'rhand')\n",
     "    lower_body = ('luleg', 'llleg', 'ruleg', 'rlleg', 'rfoot', 'lfoot')\n",
+    "    body = ('torso', 'lhand', 'rhand', 'luleg', 'llleg', 'ruleg', 'rlleg', 'rfoot', 'lfoot')\n",
     "\n",
     "    face = ('frontal_face')\n",
     "    pfhul = [('all'), face, ('head'), upper_body, lower_body]\n",
     "    pf = [('all'), face]\n",
     "    person = [('all')]\n",
     "    \n",
-    "    anno_dict = parts2darknet(pfhul, anno_paths)\n",
+    "    bf = [('torso'), face]\n",
+    "    \n",
+    "    anno_dict = parts2darknet(bf, anno_paths, darknet_path=\"darknet/darknet_annots/{0}/\".format(obj_name))    \n",
     "    write_annots(anno_dict, containing_folder=f\"darknet_annots/{obj_name}/\")\n",
     "    generate_test_train_files(anno_dict, obj_name)\n",
     "    copy_images(anno_dict, obj_name)"
@@ -503,14 +548,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10103/10103 [06:51<00:00, 24.57it/s]\n"
+      "100%|██████████| 10103/10103 [13:56<00:00, 12.07it/s]\n"
      ]
     },
     {
@@ -520,31 +565,50 @@
       "Found 7803 persons\n",
       "Found 6564 negative frames\n",
       "Found 12958 total objects\n",
-      "Parts Distribution:  [7803, 3453]\n",
+      "Parts Distribution:  [7368, 2859]\n",
       "Annotations were written to file successfully !!\n"
      ]
     }
    ],
    "source": [
-    "do_everything(\"pf\")"
+    "do_everything(\"bf\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      " 78%|███████▊  | 7917/10103 [06:09<02:00, 18.15it/s]"
-     ]
-    }
-   ],
-   "source": [
-    "do_everything(\"pfhul\")"
-   ]
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
